tests/fails/defer.t
require("fail")
terra foo()
    defer 3
end
foo()
